# bookmark-rename

./: .gitignore  README.md  app.html  main.py  manifest.json  package.json  pyproject.toml  styles.css
src/: app.js  background.js  bookmarks.js
src/bookmark_rename/: __init__.py  cli.py
tests/: bookmarks.test.js  test_cli.py
