[project]
name = "bookmark-rename"
version = "0.1.0"
description = "Chrome Speed Dial 북마크 이름 갱신 도구"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
]

[project.scripts]
bookmark-rename = "bookmark_rename.cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
extraPaths = ["src"]
